# contextd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contextd/: __init__.py  _compat.py  _paths.py  cli.py  config.py  corpus_config.py  daemon.py  daemon_ipc.py  default_config.toml  docker_compose.yml  mcp_server.py
contextd/cli/: __init__.py  _shared.py  corpora.py  infra.py  query.py
contextd/indexer/: checkpoint.py  chunker.py  debouncer.py  entity_resolver.py  git_lock.py  hasher.py  heading_parser.py  phases.py  pipeline.py  upsert_buffer.py  watcher.py
contextd/inference/: _json_body.py  prompts.py  relate.py  summarise.py  translate.py
contextd/mcp/: corpus_tools.py  readonly_guard.py  tools.py
contextd/migrations/kuzu/: _0001_baseline.py  _0002_corpus_stats.py  __init__.py
contextd/migrations/memgraph/: _0001_baseline.py  _0002_corpus_stats.py  _0003_section_fulltext.py  _0004_backfill_inferred_at.py  _0005_purge_phantom_stubs.py  __init__.py
contextd/migrations/neo4j/: _0001_baseline.py  _0002_corpus_indexes.py  _0003_section_fulltext.py  _0004_backfill_inferred_at.py  _0005_purge_phantom_stubs.py  __init__.py
contextd/ontology/: base.json  overrides.py  schema.py
contextd/prompts/: __init__.py  relate.md  translate.md
contextd/providers/: base.py  cost_log.py  factory.py  gemini.py  openai_compat.py  openai_compat_embedding.py  router.py  voyage.py
contextd/search/: __init__.py  fusion.py
contextd/storage/: _identifiers.py  _keys.py  base.py  factory.py  kuzu.py  memgraph.py  migration.py  neo4j.py
docs/: architecture.md  cli.md  mcp.md  ontology.md  runeledger-adapter.md
docs/superpowers/plans/: 2026-04-21-M11-neo4j-backend-kuzu-excision.md
examples/minimal-notes/: README.md  note-1.md  note-10.md  note-2.md  note-3.md  note-4.md  note-5.md  note-6.md  note-7.md  note-8.md  note-9.md
examples/runeledger-prd/: README.md  corpus.toml  ontology.json
examples/runeledger-prd/prompts/: summary.md
examples/runeledger-prd/tools/: dangling.cypher  four_surface.cypher  stale_shas.cypher
prompts/: summarise.md  translate.md
scripts/: README.md
scripts/systemd/: contextd-indexer.service
scripts/windows/: contextd-ask.ps1  contextd-down.ps1  contextd-status.ps1  contextd-up.ps1  start-contextd.ps1
tests/: conftest.py
tests/e2e/: conftest.py  test_full_cycle.py
tests/integration/: conftest.py  test_backfill_inferred_at.py  test_incremental.py  test_kuzu_backend.py  test_mcp_tools.py  test_memgraph_backend.py  test_neo4j_backend.py  test_pipeline.py  test_purge_phantom_stubs.py  test_runeledger_adapter.py  test_runeledger_tools.py  test_search.py  test_upsert_roundtrip.py
tests/unit/: conftest.py  test_base_capabilities.py  test_base_graphstore.py  test_checkpoint.py  test_chunker.py  test_cli_asklogscosts.py  test_cli_corpora.py  test_cli_index.py  test_cli_init.py  test_cli_lifecycle.py  test_compat.py  test_config.py  test_corpus_config.py  test_daemon.py  test_daemon_ipc.py  test_debouncer.py  test_entity_resolver.py  test_factory_neo4j.py  test_fusion.py  test_git_lock.py  test_hasher.py  test_heading_parser.py  test_identifiers.py  test_inferred_edge_targets.py  test_json_body.py  test_keys.py  test_keys_drift.py  test_mcp_corpus_tools.py  test_mcp_readonly_guard.py  test_mcp_server.py  test_mcp_tools.py  test_neo4j_backend.py  test_ontology_overrides.py  test_ontology_schema.py  test_phases.py  test_phases_concurrency.py  test_phases_idempotent.py  test_pipeline_enumerate.py  test_pipeline_incremental.py  test_prompts.py  (+15 more)
