[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "contextd"
version = "0.1.0"
description = "Locally-hosted GraphRAG knowledge layer with pluggable graph + vector storage, powered by Google Gemini and Voyage AI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Giuseppe Cardenas" }]
keywords = ["mcp", "knowledge-graph", "rag", "graphrag", "memgraph", "kuzu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "tomli-w>=1.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "watchdog>=4.0",
    "markdown-it-py>=3.0",
    "mcp>=0.9",
    "gqlalchemy>=1.5",
    "kuzu>=0.4",
    "google-genai>=0.3",
    "voyageai>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[memgraph]>=4.0",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
contextd = "contextd.cli:main"
contextd-mcp = "contextd.mcp_server:main"
contextd-indexer = "contextd.daemon:main"

[project.urls]
Homepage = "https://github.com/giuseppecardenas/contextd"
Issues = "https://github.com/giuseppecardenas/contextd/issues"

[tool.hatch.build.targets.wheel]
packages = ["contextd"]
include = [
    "contextd/default_config.toml",
    "contextd/ontology/base.json",
    "contextd/docker_compose.yml",
    "contextd/prompts/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = ["gqlalchemy", "gqlalchemy.*"]
ignore_missing_imports = true
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # gqlalchemy raises this whenever it materialises a node whose label is
    # not mapped to a Python ORM class. We intentionally don't map — the
    # GraphStore layer returns plain dicts — so this warning is structural.
    "ignore::gqlalchemy.exceptions.GQLAlchemySubclassNotFoundWarning",
]
markers = [
    "integration: tests that require Docker (Memgraph) or other external services",
]
